Repairman updates stream
